--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ padding-top: 20px;
 }
 .deals-section{
     margin-top: 300px;
+    margin-bottom: 100px;
     text-align: center;
     background-image: url("flower-shop-assignment-main/Flower Asset/Rectangle 9.png");
     height: 450px; 
@@ -116,4 +117,13 @@ padding-top: 20px;
     padding-top: 3px;
     height: 40px;
     width: 700px;    
+}
+footer{
+    background-color: black;
+    color:white;
+    text-align: center;
+    padding: 100px;
+}
+.footer-head-color{
+    color: #E55473;
 }
