--- a/style.css
+++ b/style.css
@@ -2,7 +2,14 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: 'Lato', sans-serif;}
+    font-family: 'Lato', sans-serif;
+    
+}
+body{
+    max-width: 1920px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .button-style{
 color: #FFF;
 border-radius: 8px;
@@ -49,41 +56,69 @@ padding-top: 20px;
 }
 .featured-text{
     color:#27272799;
-font-size: 18px;
-padding-top: 20px;
+    font-size: 18px;
+    padding-top: 20px;
 }
 .flower-image{
     display:flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: center;    
+}
+.img1{
+    width: 250px;
+    padding-top: 40px;
+}
+.img2{
+    width: 250px;
+}
+.img3{
+    width: 250px;
     
 }
 .flower-image1{
-    background-color: #fa98ad;
-    height: 500px;
+    /* height: 500px;
     width: 300px;
-    margin: 20px;
-    clip-path: ellipse(65% 50% at 50% 50%);
+    margin: 20px; */
+}
+.image1{
+    border-radius: 300px 300px 0px 0px ;
+    background-color: #fa98ad;
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 20px;
+}
+.image2{
+    border-radius: 300px 300px 0px 0px ;
+    background-color: #0597A026;
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 20px;
+    height: 380px;
+}
+.image3{
+    border-radius: 300px 300px 0px 0px ;
+    background-color: #477D1126;
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 20px;
 }
 .flower-image3{
-    background-color: #A7216226;
-    height: 500px;
+    /* height: 500px; */
     width: 300px;
     margin: 20px;
-    clip-path: ellipse(65% 50% at 50% 50%);   
-}
-.flower-image2{
-    background-color: #477D1126;
-    height: 500px;
-    width: 300px;
-    margin: 20px;
-    clip-path: ellipse(65% 50% at 50% 50%);
-}
+    }
+
+/* .flower-image2{
+    /* height: 500px; */
+    /* width: 300px;
+    margin: 20px; */
 /* Hot deal section styles */
     .hot-deal-section{
     display: flex;
     justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
     padding: 100px 150px;
     align-items: center;
     background-color: #E554731A;
@@ -94,12 +129,13 @@ padding-top: 20px;
 }
 .instagram-image{
     display: flex;
-    justify-content: space-around;
-    padding: 10px;
+    justify-content: center;
+    gap: 20px;
 }
-.img{
-    height: 196px;
-    margin: 20px; 
+
+.pic{
+    /* height: 296px; */
+    width: 300px; 
 }
 .deals-section{
     margin-top: 300px;
@@ -107,8 +143,10 @@ padding-top: 20px;
     text-align: center;
     background-image: url("flower-shop-assignment-main/Flower Asset/Rectangle 9.png");
     height: 450px; 
-    width: 1350px;
+    width: 1250px;
     background-repeat: no-repeat;
+    margin-left: auto;
+    margin-right: auto;
 }
 .get-heading{
     padding-top: 150px;
